Stack technology -cloud -2

--- a/references.bib
+++ b/references.bib
@@ -141,8 +141,6 @@
   Number                   = {4},
   Pages                    = {217--218},
   Volume                   = {23},
-
-  __markedentry            = {[ilias:6]},
   ISSN                     = {1365-3148},
   Owner                    = {ilias},
   Publisher                = {Blackwell Publishing Ltd},
@@ -562,8 +560,6 @@ Timothy Grance},
   Number                   = {21},
   Pages                    = {7905 - 7916},
   Volume                   = {42},
-
-  __markedentry            = {[revekka:6]},
   Doi                      = {http://dx.doi.org/10.1016/j.eswa.2015.06.025},
   ISSN                     = {0957-4174},
   Keywords                 = {Biometric identification},
@@ -625,21 +621,19 @@ Timothy Grance},
   Timestamp                = {2015.10.08}
 }
 
-@Article{Kaplan201059,
-  Title                    = {Users of the world, unite! The challenges and opportunities of Social Media },
-  Author                   = {Andreas M. Kaplan and Michael Haenlein},
-  Journal                  = {Business Horizons },
-  Year                     = {2010},
-  Number                   = {1},
-  Pages                    = {59 - 68},
-  Volume                   = {53},
+@InProceedings{Kanagaraj2011,
+  Title                    = {Proposal of an open-source Cloud computing system for exchanging medical images of a Hospital Information System},
+  Author                   = {Kanagaraj, G. and Sumathi, A.C.},
+  Booktitle                = {Trendz in Information Sciences and Computing (TISC), 2011 3rd International Conference on},
+  Year                     = {2011},
+  Month                    = {Dec},
+  Pages                    = {144-149},
 
-  Doi                      = {http://dx.doi.org/10.1016/j.bushor.2009.09.003},
-  ISSN                     = {0007-6813},
-  Keywords                 = {Social Media},
-  Owner                    = {ilias},
-  Timestamp                = {2015.10.09},
-  Url                      = {http://www.sciencedirect.com/science/article/pii/S0007681309001232}
+  __markedentry            = {[revekka:6]},
+  Doi                      = {10.1109/TISC.2011.6169102},
+  Keywords                 = {biomedical equipment;cloud computing;data warehouses;health care;information management;medical image processing;medical information systems;patient care;public domain software;HIS;administrative information;branch hospital;centralized information system design;computational resource maintenance;data warehouse;electronically stored medical records;high-end processing;hospital information system;independent information system;information sharing;integrated computerized clinical information system;medical equipments;medical image exchange;medical terminal units;open-source cloud computing system;operational information;patient health care;small township hospital;statistical requirements;Biomedical imaging;Computed tomography;Fires;Medical services;Runtime;Servers;Cloud Computing;Electronic Medical Records;Hospital Information System},
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.12}
 }
 
 @Article{landsteinerABO,
@@ -1161,5 +1155,13 @@ URN: urn:nbn:de:0114-fqs0501297},
 
   Owner                    = {revekka},
   Timestamp                = {2015.10.09}
+}
+
+@Electronic{images,
+  Title                    = {Cloud Models Images},
+  Url                      = {http://www.techiestuffs.com/3-types-of-cloud-computing-services-for-businesses/},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.12}
 }
 
