--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -14,7 +14,16 @@
 	\item Κέντρο δεδομένων. Είναι το σύνολο των διακομιστών, όπου τρέχουν οι εφαρμογές. Στο κέντρο δεδομένων εμπίπτουν και οι εικονικοί διακομιστές (μπορεί σε έναν υπολογιστή να γίνει εγκατάσταση ώστε να επιτρέπεται η ταυτόχρονη ύπαρξη πολλαπλών στιγμιοτύπων από εικονικούς διακομιστές).
 	\item Κατανεμημένους διακομιστές. Οι διακομιστές αυτοί βρίσκονται σε διαφορετικές γεωγραφικές θέσεις, έτσι ώστε να εξασφαλίζεται μεγαλύτερη ευελιξία και υψηλότερη ασφάλεια στις παροχές που προσφέρει το cloud computing. Έτσι μπορούν να αντιμετωπιστούν αποτελεσματικά περιπτώσεις παραβίασης ασφάλειας ή ανάγκης επιπλέον αποθηκευτικού χώρου και υπολογιστικής δύναμης.
 	\end{itemize}		
-	\
+	
+	Στο σχήμα   \ref{fig:cloud},φαίνεται μία σχηματική αναπαράσταση του συστήματος cloud computing.
+	
+			\begin{figure}[h]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{cloud.png}
+	    \caption{ Cloud Computing.  }
+	    \label{fig:cloud}
+	\end{figure}
+
 		Το μοντέλο cloud αποτελείται από πέντε βασικά χαρακτηριστικά:
 		\begin{itemize}
 		\item Αυτοεξυπηρέτηση μετά από ζήτηση (On-demand self-service). Ο χρήστης των υπηρεσιών του νέφους μπορεί να χρησιμοποιεί τους υπολογιστικούς πόρους που χρειάζεται, όπως χρόνο στον server και αποθηκευτικό χώρο,  αυτόματα και χωρίς να απαιτείται ανθρώπινη αλληλεπίδραση με τον φορέα παροχής υπηρεσιών. 
@@ -24,12 +33,72 @@
 		\item Μετρούμενη υπηρεσία (Measured Service). Τα cloud computing συστήματα πραγματοποιούν μετρήσεις, σε συγκεκριμένα επίπεδα αφαίρεσης ανάλογα με το είδος της υπηρεσίας (επεξεργασία, μνήμη, ενεργοί λογαριασμοί χρηστών). Με βάση αυτές τις μετρήσεις γίνεται έλεγχος και ενέργειες για την βελτιστοποίηση της χρήσης των πόρων. Επιπλέον η χρήση των πόρων παρακολουθείται, ελέγχεται και καταγράφεται με αποτέλεσμα την παροχή διαφάνειας μεταξύ του χρήστη και του παρόχου του cloud.
 		\end{itemize}	\cite{characteristicsCloud}\cite{nist}.
 
-	
+Το cloud computing μπορεί να διαχωριστεί με βάση τις υπηρεσίες που προσφέρει σε διάφορες κατηγορίες. Οι πιο βασικές, έιναι α) η υποδομή ως μία υπηρεσία (IaaaS), β) η πλατφόρμα ως μία υπηρεσία (PaaS) γ) το λογισμικό ως μία υπηρεσία (SaaS) και το δ) backend των κινητών σαν υπηρεσία(MBaaS), που είναι γνωστό σαν backend σαν υπηρεσία(BaaS).
+\\*
 		\subsubsection{IaaS}
+		\textbf{IaaS}
+\\*
+		Η υποδομή σαν υπηρεσία προσφέρει πρόσβαση σε υπολογιστικούς πόρους στο εικονικό περιβάλλον του cloud, σε εικονικό υλικό (hardware). Το εικονικό υλικό περιλαμβάνει εικονικό χώρο server, συνδέσεις δικτύου, εύρος ζώνης, διευθύνσεις IP  και εξισορροπιστές φορτίου. Το σύνολο των πόρων του υλικού προκύπτει από ένα πλήθος servers και δικτύων που είναι κατανεμημένοι συνήθως σε διάφορα κέντρα δεδομένων και ο πάροχος cloud είναι υπεύθυνος για την διατήρηση. Στον χρήστη δίνεται πρόσβαση στους πόρους αυτούς του cloud ώστε να μπορεί να χτίσει τις δικές του πλατφόρμες πληροφορικής. 
+		
+		Οι IaaS υπηρεσίες μπορούν σε συνδυασμό με άλλες υπηρεσίες του cloud να χρησιμοποιηθούν για την δημιουργία οικονομικά συμφέρουσων και εύκολα επεκτάσιμων λύσεων πληροφορικής, όπου οι δυσκολίες και τα έξοδα διαχείρισης έχουν ανατεθεί στον πάροχο cloud. Όταν οι δραστηριότητες του χρήστη κλιμακώνονται, και επιθυμεί μία επέκταση ή σμίκρυνση των υπολογιστικών πόρων, τότε μπορεί να αντλήσει ή να εγκαταλείψει πόρους cloud χωρίς να χρειάζεται να αγοραστεί, να εγκατασταθεί και να ενσωματωθεί νέο υλικό από τον ίδιο. 
+		
+		Η υπηρεσία IaaS προσφέρει επεκτασιμότητα. Οι πόροι είναι διαθέσιμοι την χρονική στιγμή που τους χρειάζεται ο πελάτης και έτσι αποφεύγονται καθυστερήσεις στην επέκταση της παραγωγικής ικανότητας. Επιπλέον, δεν υπάρχει η ανάγκη για επενδύσεις στο υλικό (hardware).  Το "φυσικό" υλικό το οποίο βρίσκεται πίσω από την IaaS υπηρεσία έχει στηθεί και συντηρείται από τον πάροχο cloud, με αποτέλεσμα να εξοικονομείται χρόνος και χρήμα στην πλευρά του χρήστη.  Ένα βασικό πλεονέκτημα  είναι ότι ο πελάτης κοστολογείται με βάση την χρήση και πληρώνει μόνο τους πόρους που χρησιμοποιεί. Οι υπηρεσίες μπορούν να προσεγγισθούν από οποιαδήποτε τοποθεσία, αρκεί ο χρήστης να έχει πρόσβαση στο ίντερνετ και τα κατάλληλα διαπιστευτήρια, γεγονός που εξασφαλίζει ανεξαρτησία σε σχέση με την τοποθεσία. Τέλος, στις υπηρεσίες IaaS δεν υπάρχει περίπτωση κατάρρευσης ή βλάβης στο σύστημα, καθώς ακόμα και αν ένας server ή ένας διακόπτης δικτύου πέσει η ευρύτερη υπηρεσία θα παραμείνει ανεπηρέαστη λόγω των υπόλοιπων πόρων υλικού καθώς και των επιπλέων ρυθμίσεων. Στις περισσότερες περιπτώσεις, ακόμα και αν έπεφτε ολόκληρο το κέντρο δεδομένων, με εξαίρεση έναν server ο οποίος θα συνέχιζε να λειτουργεί, αυτό θα ήταν αρκετό ώστε οι IaaS υπηρεσίες να εξακολουθούν να τρέχουν ανεμπόδιστα. Ένα μειονέκτημα που υπάρχει είναι ότι σε περιπτώσεις που υπάρχει ανάγκη για αλληλεπίδραση υψηλής ταχύτητας μεταξύ του εσωτερικού λογισμικού ή λογισμικού που υπάρχει σε κάποιο άλλο cloud σας και τον πάροχο υπηρεσιών IaaS Cloud, στηριζόμενοι σε μια internet σύνδεση μπορεί να μην γίνεται να επιτευχθεί η ταχύτητα που χρειάζεται. \cite{images}
+	\\*	
+		
+		\begin{figure}[h]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{IaaS.jpg}
+	    \caption{ Υπηρεσίες IaaS cloud computing.  }
+	    \label{fig:mvp_pattern}
+	\end{figure}
+		
 		\subsubsection{PaaS}
+	\textbf{PaaS}		
+		\\*
+		Η πλατφόρμα σαν υπηρεσία παρέχει στους πελάτες του υπολογιστικού νέφους όλους τους πόρους και τα εργαλεία που απαιτούνται για να έχουν την δυνατότητα να αναπτύξουν, να διαχειριστούν και να τρέξουν εφαρμογές στο διαδίκτυο χωρίς την πολυπλοκότητα και την ανάγκη εγκατάστασης της υποδομής (λογισμικού) που συνήθως συνδέονται με την ανάπτυξη και την έναρξη μιας εφαρμογής. Οι πλατφόρμες σαν υπηρεσίες προσφέρονται σε δύο διαφορετικές μορφές: είτε σαν δημόσιες cloud υπηρεσίες από τον πάροχο στις οποίες  ο χρήστης  ελέγχει την ανάπτυξη του λογισμικού και τις ρυθμίσεις διαμόρφωσης καθώς ο πάροχος εξασφαλίζει το απαραίτητο υπόβαθρο που χρειάζεται η εφαρμογή, είτε σαν λογισμικό που εγκαθίσταται σε ιδιωτικά κέντρα δεδομένων ή δημόσια υποδομή ως υπηρεσία που διοικείται από εσωτερικά συστήματα πληροφορικής. 
+		
+		Στο μοντέλο PaaS ο χρήστης δεν ελέγχει την υποκείμενη cloud υποδομή, η οποία συμπεριλαμβάνει το δίκτυο, τους servers, το λειτουργικό σύστημα και τους αποθηκευτικούς χώρους αλλά έχει τον πλήρη έλεγχο στις εγκατεστημένες ή αναπτυγμένες εφαρμογές καθώς και στις ρυθμίσεις των παραμέτρων που γίνονται στο περιβάλλον. Το μοντέλο PaaS βασίζεται σε χρήση της HTML ή Javascript. Υπάρχουν διάφοροι τύποι του μοντέλου PaaS, δημόσιοι, ιδιωτικοί και υβριδικοί. Σε αυτού του τύπου το μοντέλο παροχής υπηρεσιών cloud απαιτούνται δύο επίπεδα προστασίας για την διασφάλιση της ασφάλειας της ιδιωτικής ζωής. Στο χαμηλότερο επίπεδο του συστήματος, ο πάροχος cloud μπορεί να παρέχει βασικούς μηχανισμούς ασφαλείας, όπως end-to-end κρυπτογράφηση, έλεγχο ταυτότητας και εξουσιοδότηση. Στο υψηλότερο επίπεδο, ο  χρήστης των υπηρεσιών cloud χρειάζεται να καθορίσει τις πολιτικές ελέγχου της πρόσβασης στην εφαρμογή.\cite{Kanagaraj2011}
+		
+		Στα κύρια πλεονεκτήματα του μοντέλου PaaS είναι συγκαταλέγεται αρχικά το γεγονός ότι επιτρέπει τον προγραμματισμό υψηλού επιπέδου με υπερβολικά επίπεδα πολυπλοκότητας. Επιπροσθέτως καθιστά την ολική ανάπτυξη μίας εφαρμογής πιο αποτελεσματική, εφόσον έχει ενσωματωμένη δομή και την συντήρηση - βελτίωση της πιο εύκολη. Ένα άλλο σημαντικό πλεονέκτημα αποτελεί η υψηλή διαθεσιμότητα, η ελαστικότητα και η ευελιξία που προσφέρει με τις ικανότητες πλήρους αυτοδιαχείρισης και αυτό-κλιμάκωσης της υποδομής και της πλατφόρμας εφαρμογών. Βασικό μειονέκτημα αποτελεί η έλλειψη δια-λειτουργικότητας και μεταφοράς της εφαρμογής από τον έναν πάροχο στον άλλον. 
+
+	\begin{figure}[h]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{PaaS.jpg}
+	    \caption{Υπηρεσίες PaaS cloud computing.  }
+	    \label{fig:mvp_pattern}
+	\end{figure}
+
 		\subsubsection{SaaS}
+	\textbf{SaaS}	
+	\\*	
+	Το λογισμικό σαν υπηρεσία είναι ένα μοντέλο ανάπτυξης λογισμικού σύμφωνα με το οποίο παρέχονται κατόπιν ζήτησης στον χρήστη εφαρμογές και υπολογιστικοί πόροι. Ουσιαστικά, είναι όλες οι υπηρεσίες του cloud στις οποίες οι χρήστες είναι σε θέση να αποκτήσουν πρόσβαση σε εφαρμογές μέσω σύνδεσης στο Internet. Οι εφαρμογές αυτές βρίσκονται στο cloud και μπορούν να χρησιμοποιηθούν για ένα ευρύ φάσμα δραστηριοτήτων, τόσο από εταιρείες όσο και από άτομα. Η χρήση των εφαρμογών αυτών αποτελεί περισσότερο ενοικίαση λογισμικού παρά αγορά του. Με την παραδοσιακές εφαρμογές λογισμικού αρχικά αγοράζεται το λογισμικό ως πακέτο, εγκαθίσταται σε έναν υπολογιστή και συνήθως οι σχετικές άδειες περιορίζουν τον αριθμό των χρηστών και των συσκευών όπου μπορεί να αναπτυχθεί το λογισμικό. Εν αντιθέσει, οι χρήστες των υπηρεσιών SaaS εγγράφονται στο λογισμικό, χωρίς να το αγοράσουν, συνήθως σε μηνιαία βάση. 
+	
+	Οι περισσότεροι χρήστες χρησιμοποιούν έναν λεπτό πελάτη (thin client) για να αποκτήσουν πρόσβαση στις υπηρεσίες SaaS. Οι υπηρεσίες SaaS Οι εταιρικοί χρήστες χρησιμοποιούν τις εφαρμογές που παρέχει ο πάροχος cloud για ανάγκες όπως λογισμικό γραφείου, λογισμικό ανταλλαγής μηνυμάτων,  λογισμικό λογιστικής και τιμολόγησης, λογισμικό για παρακολούθηση των επιδόσεων, λογισμικό διαχείρισης των επιχειρησιακών σχέσεων και πολλά άλλα. 
+	
+	Βασικά πλεονεκτήματα τους είναι η ευελιξία και η επεκτασιμότητα που προσφέρουν, καθώς οι χρήστες δεν χρειάζεται να αγοράσουν άλλο λογισμικό ή άλλον server, απλά ενεργοποιούν νέες προσφορές του μοντέλου SaaS. Πολύ σημαντικό είναι επίσης η υψηλή ποιότητα των υπηρεσιών η υψηλή σταθερότητα και το γεγονός ότι απαιτείται ελάχιστη συντήρηση. Υπάρχει μεγάλο χρονικό κέρδος, καθώς στις υπηρεσίες SaaS το λογισμικό είναι ήδη εγκατεστημένο και ρυθμισμένο, και η εφαρμογή μπορεί να διατεθεί κατευθείαν στον χρήστη έτοιμη για χρήση. Η πολιτική κοστολόγησης της χρήσης των υπηρεσιών είναι ιδιαίτερα συμφέρουσα συγκριτικά με την αγορά του λογισμικού και πολλές φορές επιτρέπει την χρήση εφαρμογών που σε άλλη περίπτωση θα ήταν απαγορευμένες, λόγω ιδιαίτερα υψηλού κόστους. Θεωρείται αξιόπιστη λύση ασφαλείας , καθώς υιοθετεί SSL (Secure Socket Layer) στις υπηρεσίες του με αποτέλεσμα τα δεδομένα να μεταδίδονται από και προς τον χρήστη με ασφάλεια. Βασικό μειονέκτημα αποτελεί το γεγονός ότι παρέχει πρόσβαση βασισμένη σε ένα δίκτυο που αποτελείται από εμπορικές εφαρμογές με αποτέλεσμα να μην μπορεί πάντα κάποιος να βρει το λογισμικό που ψάχνει διαθέσιμο στο SaaS. 
+	
+		\begin{figure}[h]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{SaaS.jpg}
+	    \caption{Υπηρεσίες SaaS cloud computing.}
+	    \label{fig:mvp_pattern}
+	\end{figure}
+	
 		\subsubsection{BaaS}
-			Γιατί Parse ?
+\textbf{BaaS}
+\\*
+	
+	Η υπηρεσία BaaS είναι ένα μοντέλο που παρέχει στους προγραμματιστές διαδικτυακών εφαρμογών και εφαρμογών για κινητά τηλέφωνα έναν τρόπο για να συνδέουν τις εφαρμογές τους με τον χώρο αποθήκευσης για backend στο cloud και με τα APIs που χρησιμοποιούνται σε backend εφαρμογές.  Επιπλέον παρέχει υπηρεσίες όπως η διαχείριση χρηστών, ειδοποιήσεις (push notifications), κώδικα server και σύνδεση με υπηρεσίες κοινωνικών δικτύων.  Όλες αυτές οι υπηρεσίες παρέχονται μέσω της χρήσης εργαλείων ανάπτυξης λογισμικού (SDKs) και έχουν την δική τους διεπαφή προγραμματισμού εφαρμογών (APIs), που τους επιτρέπει να ενσωματωθούν στις εφαρμογές χωρίς ιδιαίτερο κόπο. Η παροχή ενός σταθερού τρόπου για την διαχείριση των backend δεδομένων συνεπάγεται το γεγονός ότι οι προγραμματιστές δεν χρειάζεται να αναπτύξουν κώδικα backend για κάθε υπηρεσία που η εφαρμογή τους χρησιμοποιεί ή έχει πρόσβαση.
+
+	Ένα από τα κύρια πλεονεκτήματα της χρήσης υπηρεσιών BaaS είναι η τεράστια μείωση του χρόνου ολοκλήρωσης και διατήρησης της εφαρμογής , σε ποσοστό μέχρι και 60\%. Επιπλέον ευνοείται η κλιμάκωση, καθώς το BaaS παρέχει ένα συγκεκριμένο backend το οποίο διαμορφώνει κάποιος εύκολα με βάση τις ανάγκες της εφαρμογής. Η ανάλυση της εφαρμογής γίνεται πιο αποδοτική, καθώς το BaaS διαχειρίζεται όλη την "κίνηση" που γίνεται μέσα στην εφαρμογή και αναλύει τι συμβαίνει σε αυτήν (ποιοι χρήστες είναι πιο ενεργοί, ποιοι είναι πιο εμπλεκόμενοι κ.λ.π. ). Παρά τα πολλά οφέλη του BaaS, είναι επίσης σημαντικό να ληφθεί υπόψιν η κατασκευή του user-interface (UI), διότι αυτό βρίσκεται σε άμεση επικοινωνία με τους τελικούς χρήστες. Ο ρόλος του UI είναι να συνδέεται η εφαρμογή σε οποιοδήποτε άλλο κομμάτι μέρος ή σε αποκλειστικά APIs που συνδέονται στο backend κάτι το οποίο με χρήση των υπηρεσιών BaaS δεν είναι δυνατό πολλές φορές καθώς μια εφαρμογή "κλειδώνεται" στον πάροχο.
+	
+		\begin{figure}[h]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{BaaS.png}
+	    \caption{Υπηρεσίες BaaS cloud computing. }
+	    \label{fig:mvp_pattern}
+	\end{figure}
+
 	Μοντέλα ανάπτυξης
 		\subsubsection{Private cloud}
 		\subsubsection{Community cloud}
