--- a/references.bib
+++ b/references.bib
@@ -141,6 +141,7 @@
   Number                   = {4},
   Pages                    = {217--218},
   Volume                   = {23},
+
   ISSN                     = {1365-3148},
   Owner                    = {ilias},
   Publisher                = {Blackwell Publishing Ltd},
@@ -560,6 +561,7 @@ Timothy Grance},
   Number                   = {21},
   Pages                    = {7905 - 7916},
   Volume                   = {42},
+
   Doi                      = {http://dx.doi.org/10.1016/j.eswa.2015.06.025},
   ISSN                     = {0957-4174},
   Keywords                 = {Biometric identification},
@@ -634,6 +636,24 @@ Timothy Grance},
   Keywords                 = {biomedical equipment;cloud computing;data warehouses;health care;information management;medical image processing;medical information systems;patient care;public domain software;HIS;administrative information;branch hospital;centralized information system design;computational resource maintenance;data warehouse;electronically stored medical records;high-end processing;hospital information system;independent information system;information sharing;integrated computerized clinical information system;medical equipments;medical image exchange;medical terminal units;open-source cloud computing system;operational information;patient health care;small township hospital;statistical requirements;Biomedical imaging;Computed tomography;Fires;Medical services;Runtime;Servers;Cloud Computing;Electronic Medical Records;Hospital Information System},
   Owner                    = {revekka},
   Timestamp                = {2015.10.12}
+}
+
+@Article{Kaplan201059,
+  Title                    = {Users of the world, unite! The challenges and opportunities of Social Media },
+  Author                   = {Andreas M. Kaplan and Michael Haenlein},
+  Journal                  = {Business Horizons },
+  Year                     = {2010},
+  Number                   = {1},
+  Pages                    = {59 - 68},
+  Volume                   = {53},
+
+  Abstract                 = {The concept of Social Media is top of the agenda for many business executives today. Decision makers, as well as consultants, try to identify ways in which firms can make profitable use of applications such as Wikipedia, YouTube, Facebook, Second Life, and Twitter. Yet despite this interest, there seems to be very limited understanding of what the term “Social Media” exactly means; this article intends to provide some clarification. We begin by describing the concept of Social Media, and discuss how it differs from related concepts such as Web 2.0 and User Generated Content. Based on this definition, we then provide a classification of Social Media which groups applications currently subsumed under the generalized term into more specific categories by characteristic: collaborative projects, blogs, content communities, social networking sites, virtual game worlds, and virtual social worlds. Finally, we present 10 pieces of advice for companies which decide to utilize Social Media. },
+  Doi                      = {http://dx.doi.org/10.1016/j.bushor.2009.09.003},
+  ISSN                     = {0007-6813},
+  Keywords                 = {Social Media},
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.12},
+  Url                      = {http://www.sciencedirect.com/science/article/pii/S0007681309001232}
 }
 
 @Article{landsteinerABO,
