--- a/technology_stack.tex
+++ b/technology_stack.tex
@@ -36,8 +36,6 @@
 Το cloud computing μπορεί να διαχωριστεί με βάση τις υπηρεσίες που προσφέρει σε διάφορες κατηγορίες. Οι πιο βασικές, έιναι α) η υποδομή ως μία υπηρεσία (IaaaS), β) η πλατφόρμα ως μία υπηρεσία (PaaS) γ) το λογισμικό ως μία υπηρεσία (SaaS) και το δ) backend των κινητών σαν υπηρεσία(MBaaS), που είναι γνωστό σαν backend σαν υπηρεσία(BaaS).
 \\*
 		\subsubsection{IaaS}
-		\textbf{IaaS}
-\\*
 		Η υποδομή σαν υπηρεσία προσφέρει πρόσβαση σε υπολογιστικούς πόρους στο εικονικό περιβάλλον του cloud, σε εικονικό υλικό (hardware). Το εικονικό υλικό περιλαμβάνει εικονικό χώρο server, συνδέσεις δικτύου, εύρος ζώνης, διευθύνσεις IP  και εξισορροπιστές φορτίου. Το σύνολο των πόρων του υλικού προκύπτει από ένα πλήθος servers και δικτύων που είναι κατανεμημένοι συνήθως σε διάφορα κέντρα δεδομένων και ο πάροχος cloud είναι υπεύθυνος για την διατήρηση. Στον χρήστη δίνεται πρόσβαση στους πόρους αυτούς του cloud ώστε να μπορεί να χτίσει τις δικές του πλατφόρμες πληροφορικής. 
 		
 		Οι IaaS υπηρεσίες μπορούν σε συνδυασμό με άλλες υπηρεσίες του cloud να χρησιμοποιηθούν για την δημιουργία οικονομικά συμφέρουσων και εύκολα επεκτάσιμων λύσεων πληροφορικής, όπου οι δυσκολίες και τα έξοδα διαχείρισης έχουν ανατεθεί στον πάροχο cloud. Όταν οι δραστηριότητες του χρήστη κλιμακώνονται, και επιθυμεί μία επέκταση ή σμίκρυνση των υπολογιστικών πόρων, τότε μπορεί να αντλήσει ή να εγκαταλείψει πόρους cloud χωρίς να χρειάζεται να αγοραστεί, να εγκατασταθεί και να ενσωματωθεί νέο υλικό από τον ίδιο. 
@@ -49,12 +47,10 @@
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{IaaS.jpg}
 	    \caption{ Υπηρεσίες IaaS cloud computing.  }
-	    \label{fig:mvp_pattern}
+	    \label{fig:iaas}
 	\end{figure}
 		
 		\subsubsection{PaaS}
-	\textbf{PaaS}		
-		\\*
 		Η πλατφόρμα σαν υπηρεσία παρέχει στους πελάτες του υπολογιστικού νέφους όλους τους πόρους και τα εργαλεία που απαιτούνται για να έχουν την δυνατότητα να αναπτύξουν, να διαχειριστούν και να τρέξουν εφαρμογές στο διαδίκτυο χωρίς την πολυπλοκότητα και την ανάγκη εγκατάστασης της υποδομής (λογισμικού) που συνήθως συνδέονται με την ανάπτυξη και την έναρξη μιας εφαρμογής. Οι πλατφόρμες σαν υπηρεσίες προσφέρονται σε δύο διαφορετικές μορφές: είτε σαν δημόσιες cloud υπηρεσίες από τον πάροχο στις οποίες  ο χρήστης  ελέγχει την ανάπτυξη του λογισμικού και τις ρυθμίσεις διαμόρφωσης καθώς ο πάροχος εξασφαλίζει το απαραίτητο υπόβαθρο που χρειάζεται η εφαρμογή, είτε σαν λογισμικό που εγκαθίσταται σε ιδιωτικά κέντρα δεδομένων ή δημόσια υποδομή ως υπηρεσία που διοικείται από εσωτερικά συστήματα πληροφορικής. 
 		
 		Στο μοντέλο PaaS ο χρήστης δεν ελέγχει την υποκείμενη cloud υποδομή, η οποία συμπεριλαμβάνει το δίκτυο, τους servers, το λειτουργικό σύστημα και τους αποθηκευτικούς χώρους αλλά έχει τον πλήρη έλεγχο στις εγκατεστημένες ή αναπτυγμένες εφαρμογές καθώς και στις ρυθμίσεις των παραμέτρων που γίνονται στο περιβάλλον. Το μοντέλο PaaS βασίζεται σε χρήση της HTML ή Javascript. Υπάρχουν διάφοροι τύποι του μοντέλου PaaS, δημόσιοι, ιδιωτικοί και υβριδικοί. Σε αυτού του τύπου το μοντέλο παροχής υπηρεσιών cloud απαιτούνται δύο επίπεδα προστασίας για την διασφάλιση της ασφάλειας της ιδιωτικής ζωής. Στο χαμηλότερο επίπεδο του συστήματος, ο πάροχος cloud μπορεί να παρέχει βασικούς μηχανισμούς ασφαλείας, όπως end-to-end κρυπτογράφηση, έλεγχο ταυτότητας και εξουσιοδότηση. Στο υψηλότερο επίπεδο, ο  χρήστης των υπηρεσιών cloud χρειάζεται να καθορίσει τις πολιτικές ελέγχου της πρόσβασης στην εφαρμογή.\cite{Kanagaraj2011}
@@ -65,12 +61,10 @@
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{PaaS.jpg}
 	    \caption{Υπηρεσίες PaaS cloud computing.  }
-	    \label{fig:mvp_pattern}
+	    \label{fig:paas}
 	\end{figure}
 
 		\subsubsection{SaaS}
-	\textbf{SaaS}	
-	\\*	
 	Το λογισμικό σαν υπηρεσία είναι ένα μοντέλο ανάπτυξης λογισμικού σύμφωνα με το οποίο παρέχονται κατόπιν ζήτησης στον χρήστη εφαρμογές και υπολογιστικοί πόροι. Ουσιαστικά, είναι όλες οι υπηρεσίες του cloud στις οποίες οι χρήστες είναι σε θέση να αποκτήσουν πρόσβαση σε εφαρμογές μέσω σύνδεσης στο Internet. Οι εφαρμογές αυτές βρίσκονται στο cloud και μπορούν να χρησιμοποιηθούν για ένα ευρύ φάσμα δραστηριοτήτων, τόσο από εταιρείες όσο και από άτομα. Η χρήση των εφαρμογών αυτών αποτελεί περισσότερο ενοικίαση λογισμικού παρά αγορά του. Με την παραδοσιακές εφαρμογές λογισμικού αρχικά αγοράζεται το λογισμικό ως πακέτο, εγκαθίσταται σε έναν υπολογιστή και συνήθως οι σχετικές άδειες περιορίζουν τον αριθμό των χρηστών και των συσκευών όπου μπορεί να αναπτυχθεί το λογισμικό. Εν αντιθέσει, οι χρήστες των υπηρεσιών SaaS εγγράφονται στο λογισμικό, χωρίς να το αγοράσουν, συνήθως σε μηνιαία βάση. 
 	
 	Οι περισσότεροι χρήστες χρησιμοποιούν έναν λεπτό πελάτη (thin client) για να αποκτήσουν πρόσβαση στις υπηρεσίες SaaS. Οι υπηρεσίες SaaS Οι εταιρικοί χρήστες χρησιμοποιούν τις εφαρμογές που παρέχει ο πάροχος cloud για ανάγκες όπως λογισμικό γραφείου, λογισμικό ανταλλαγής μηνυμάτων,  λογισμικό λογιστικής και τιμολόγησης, λογισμικό για παρακολούθηση των επιδόσεων, λογισμικό διαχείρισης των επιχειρησιακών σχέσεων και πολλά άλλα. 
@@ -81,13 +75,10 @@
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{SaaS.jpg}
 	    \caption{Υπηρεσίες SaaS cloud computing.}
-	    \label{fig:mvp_pattern}
+	    \label{fig:saas}
 	\end{figure}
 	
 		\subsubsection{BaaS}
-\textbf{BaaS}
-\\*
-	
 	Η υπηρεσία BaaS είναι ένα μοντέλο που παρέχει στους προγραμματιστές διαδικτυακών εφαρμογών και εφαρμογών για κινητά τηλέφωνα έναν τρόπο για να συνδέουν τις εφαρμογές τους με τον χώρο αποθήκευσης για backend στο cloud και με τα APIs που χρησιμοποιούνται σε backend εφαρμογές.  Επιπλέον παρέχει υπηρεσίες όπως η διαχείριση χρηστών, ειδοποιήσεις (push notifications), κώδικα server και σύνδεση με υπηρεσίες κοινωνικών δικτύων.  Όλες αυτές οι υπηρεσίες παρέχονται μέσω της χρήσης εργαλείων ανάπτυξης λογισμικού (SDKs) και έχουν την δική τους διεπαφή προγραμματισμού εφαρμογών (APIs), που τους επιτρέπει να ενσωματωθούν στις εφαρμογές χωρίς ιδιαίτερο κόπο. Η παροχή ενός σταθερού τρόπου για την διαχείριση των backend δεδομένων συνεπάγεται το γεγονός ότι οι προγραμματιστές δεν χρειάζεται να αναπτύξουν κώδικα backend για κάθε υπηρεσία που η εφαρμογή τους χρησιμοποιεί ή έχει πρόσβαση.
 
 	Ένα από τα κύρια πλεονεκτήματα της χρήσης υπηρεσιών BaaS είναι η τεράστια μείωση του χρόνου ολοκλήρωσης και διατήρησης της εφαρμογής , σε ποσοστό μέχρι και 60\%. Επιπλέον ευνοείται η κλιμάκωση, καθώς το BaaS παρέχει ένα συγκεκριμένο backend το οποίο διαμορφώνει κάποιος εύκολα με βάση τις ανάγκες της εφαρμογής. Η ανάλυση της εφαρμογής γίνεται πιο αποδοτική, καθώς το BaaS διαχειρίζεται όλη την "κίνηση" που γίνεται μέσα στην εφαρμογή και αναλύει τι συμβαίνει σε αυτήν (ποιοι χρήστες είναι πιο ενεργοί, ποιοι είναι πιο εμπλεκόμενοι κ.λ.π. ). Παρά τα πολλά οφέλη του BaaS, είναι επίσης σημαντικό να ληφθεί υπόψιν η κατασκευή του user-interface (UI), διότι αυτό βρίσκεται σε άμεση επικοινωνία με τους τελικούς χρήστες. Ο ρόλος του UI είναι να συνδέεται η εφαρμογή σε οποιοδήποτε άλλο κομμάτι μέρος ή σε αποκλειστικά APIs που συνδέονται στο backend κάτι το οποίο με χρήση των υπηρεσιών BaaS δεν είναι δυνατό πολλές φορές καθώς μια εφαρμογή "κλειδώνεται" στον πάροχο.
@@ -96,7 +87,7 @@
 	    \centering
 	    \includegraphics[width=0.7\textwidth]{BaaS.png}
 	    \caption{Υπηρεσίες BaaS cloud computing. }
-	    \label{fig:mvp_pattern}
+	    \label{fig:baas}
 	\end{figure}
 
 	Μοντέλα ανάπτυξης
